<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:backgroundTint="@color/background"
    tools:context=".ForgotPasswordActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerlineForgotPw"
        android:layout_centerInParent="true">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerlineForgotPw"
        android:layout_marginBottom="250dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotPwText"
            android:textSize="42sp"
            android:textColor="@color/note_popup"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pwReminderText"
            android:textSize="23sp"
            android:textColor="@color/note_title">
        </TextView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerlineForgotPw"
        android:layout_marginBottom="10dp"
        android:id="@+id/emailLForgotTextInputLayout"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:id="@+id/emailForgotEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" />

    </RelativeLayout>

    <Button
        android:id="@+id/recoverPwButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerlineForgotPw"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/kuldesText"
        android:backgroundTint="@color/floating_button"
        android:textColor="@color/note_popup"/>


    <Button
        android:id="@+id/backToLoginButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        android:text="@string/backToLoginText"
        android:backgroundTint="@color/floating_button"
        android:textColor="@color/note_popup"/>


</RelativeLayout>