<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="5dp"
        android:id="@+id/noteCard">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/note"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/noteTitle"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/cimText"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:background="@color/note_title"
                    android:textStyle="bold">

                </TextView>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/menuPopButton"
                    android:layout_weight="0"
                    android:src="@drawable/ic_baseline_more_vert_24"
                    android:contentDescription="@string/menu_button_text"
                    android:background="@color/note_popup">
                </ImageView>



            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/noteContent"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/contentNoteText"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:background="@color/note_content">

            </TextView>




        </LinearLayout>







    </androidx.cardview.widget.CardView>



</RelativeLayout>